[project]
name = "smile-volume"
version = "0.1.0"
description = "macOS smile-to-unmute volume control using webcam and MediaPipe"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.5.0",
    "numpy>=1.21.0",
    "rumps>=0.4.0",
    "onnxruntime>=1.14.0",
    "Pillow>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["smile_volume"]
